text is overlapping issue solved

--- a/script/css/admin.css
+++ b/script/css/admin.css
@@ -14687,6 +14687,11 @@ div#messaging-channels {
   border-bottom: 4px solid #fff;
   border-right: 4px solid #fff;
 }
+#tab-membership p.first-p {
+  margin: 0 0 37px 0 !important;
+  font-size: 20px;
+  color: #4B5563;
+}
 #tab-membership .plans-box-menu ul {
   background: #F3F4F6;
   border: 1px solid #E5E7EB;
@@ -14706,11 +14711,11 @@ div#messaging-channels {
 }
 #tab-membership .addons-title {
   border-bottom: 0;
-  font-size: 30px;
+  font-size: 32px;
   color: #000;
   font-weight: 700;
-  padding-bottom: 15px;
-  margin-top: 40px;
+  margin: 37px 0;
+  padding: 0;
 }
 #tab-membership .plans-box {
   grid-template-columns: 1fr;
